--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(IDF)
 export(Qe_muskingum)
 export(Qin)
 export(V_muskingum)
+export(Virtual_retention)
 export(aggrMonth)
 export(aggrMonths.yearly)
 export(aggr_lead_plus_3months)
@@ -17,6 +18,9 @@ export(circular_flow_area)
 export(circular_hydraulic_radius)
 export(circular_wetted_angle)
 export(dQdy_circular)
+export(define_obj_Qpipe)
+export(define_obj_Qret_str)
+export(define_obj_Qsb)
 export(fillGapsDaily)
 export(fillGapsHourly)
 export(getFARi_ROC)
