addition of create.R which compiles the package before uploading to gitlab

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,4 +49,5 @@ export(loadWmmsf)
 export(loss_model)
 export(mannings_eq_flow)
 export(obs_fc_table)
+export(spacetime2WASA_P)
 export(startGRASS)
