adding Humidity and Radiation to the set of imported variables

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,14 +34,22 @@ export(getfp)
 export(inlet_time)
 export(interp_grid)
 export(kinematic_wave_celerity_constant_B)
+export(loadHechameqm)
+export(loadHechamxds)
 export(loadHmmsf)
+export(loadHmmsfeqm)
+export(loadHmmsfxds)
 export(loadPechameqm)
 export(loadPechamxds)
 export(loadPmmfs)
 export(loadPmmsfeqm)
 export(loadPmmsfxds)
 export(loadPrsm)
+export(loadRechameqm)
+export(loadRechamxds)
 export(loadRmmsf)
+export(loadRmmsfeqm)
+export(loadRmmsfxds)
 export(loadTechameqm)
 export(loadTechamxds)
 export(loadTmmsf)
