creates scripts for converting long data frames into WASA input files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,10 @@ export(loadTmmsf)
 export(loadTmmsfeqm)
 export(loadTmmsfxds)
 export(loadWmmsf)
+export(long2WASA_H)
+export(long2WASA_P)
+export(long2WASA_R)
+export(long2WASA_T)
 export(obs_fc_table)
 export(spacetime2WASA_H)
 export(spacetime2WASA_P)
