--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(long2WASA_P)
 export(long2WASA_R)
 export(long2WASA_T)
 export(obs_fc_table)
+export(roc)
 export(spacetime2WASA_H)
 export(spacetime2WASA_P)
 export(spacetime2WASA_R)
